--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,12 @@
   <script src="js/main.js" defer></script>
 </head>
 <body>
+  <div class="bg-animation">
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+        <div id="stars4"></div>
+    </div>
   <header>
     <h1>EventEase Dashboard</h1>
   </header>
